// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SourceTypeItem /> should render when [disabled=false] 1`] = `
<SourceTypes__StyledSourceTypeItem
  disabled={false}
>
  <span>
    genotype
  </span>
  <Icon
    color="red"
    faStyle="fas"
    fixedWidth={false}
    name="trash"
    onClick={[Function]}
  />
</SourceTypes__StyledSourceTypeItem>
`;

exports[`<SourceTypeItem /> should render when [disabled=true] 1`] = `
<SourceTypes__StyledSourceTypeItem
  disabled={true}
>
  <span>
    genotype
  </span>
</SourceTypes__StyledSourceTypeItem>
`;

exports[`<SourceTypes /> should render when global 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <SourceTypes__SourceTypesTitle>
      <span>
        Default Source Types
      </span>
    </SourceTypes__SourceTypesTitle>
    <p>
      
    Configure a list of default source types. New references will automatically take these values as their allowed
    source types.

    </p>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <SourceTypes__SourceTypesInputGroup>
      <Input__InputContainer
        align="right"
      >
        <Input
          disabled={false}
          onChange={[Function]}
          value=""
        />
        <Input__InputIcon
          bsStyle="primary"
          name="plus-circle"
          onClick={[Function]}
        />
      </Input__InputContainer>
      <Input__InputError />
    </SourceTypes__SourceTypesInputGroup>
     
  </Box__BoxGroupSection>
  <SourceTypeItem
    disabled={false}
    key="isolate"
    onRemove={[Function]}
    sourceType="isolate"
  />
  <SourceTypeItem
    disabled={false}
    key="serotype"
    onRemove={[Function]}
    sourceType="serotype"
  />
</Box__BoxGroup>
`;

exports[`<SourceTypes /> should render when neither 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <SourceTypes__SourceTypesTitle>
      <span>
         Source Types
      </span>
      <SourceTypes__SourceTypesCheckbox
        checked={true}
        label="Enable"
        onClick={[Function]}
      />
    </SourceTypes__SourceTypesTitle>
    <p>
      
    Configure a list of allowable source types. When a user creates a new isolate they will only be able to select a
    source type from this list. If this feature is disabled, users will be able to enter any string as a source
    type.

    </p>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <SourceTypes__SourceTypesInputGroup>
      <Input__InputContainer
        align="right"
      >
        <Input
          disabled={false}
          onChange={[Function]}
          value=""
        />
        <Input__InputIcon
          bsStyle="primary"
          name="plus-circle"
          onClick={[Function]}
        />
      </Input__InputContainer>
      <Input__InputError />
    </SourceTypes__SourceTypesInputGroup>
     
  </Box__BoxGroupSection>
  <SourceTypeItem
    disabled={false}
    key="isolate"
    onRemove={[Function]}
    sourceType="isolate"
  />
  <SourceTypeItem
    disabled={false}
    key="serotype"
    onRemove={[Function]}
    sourceType="serotype"
  />
</Box__BoxGroup>
`;

exports[`<SourceTypes /> should render when remote 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <SourceTypes__SourceTypesTitle>
      <span>
         Source Types
      </span>
    </SourceTypes__SourceTypesTitle>
    <p>
      
    Configure a list of allowable source types. When a user creates a new isolate they will only be able to select a
    source type from this list. If this feature is disabled, users will be able to enter any string as a source
    type.

    </p>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <SourceTypes__SourceTypesInputGroup>
      <Input__InputContainer
        align="right"
      >
        <Input
          disabled={true}
          onChange={[Function]}
          value=""
        />
        <Input__InputIcon
          bsStyle="primary"
          name="plus-circle"
          onClick={[Function]}
        />
      </Input__InputContainer>
      <Input__InputError />
    </SourceTypes__SourceTypesInputGroup>
     
  </Box__BoxGroupSection>
  <SourceTypeItem
    disabled={true}
    key="isolate"
    onRemove={[Function]}
    sourceType="isolate"
  />
  <SourceTypeItem
    disabled={true}
    key="serotype"
    onRemove={[Function]}
    sourceType="serotype"
  />
</Box__BoxGroup>
`;
